# ctrldoc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATION_v0.3_to_v1.0.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  SPEC.md  SPEC_DIGEST.md  SPEC_TRACE.md  TESTING.md
docs/decisions/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md  ADR-0007.md  INDEX.md
docs/spec/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  2.md  3.md  4.1.md  4.2.md  4.md  5.md  6.1.md  6.10.md  6.2.md  6.3.md  6.4.md  6.5.md  6.6.md  6.7.md  6.8.md  6.9.md  6.md  7.md  8.md  9.md  INDEX.md
examples/: 01_qa.py  02_coverage_audit.py  03_quality_audit.py  04_analytical_review.py  05_anomaly_scan.py  06_relation_map.py  README.md
examples/v1/: 01_workspace.py  02_coverage_transport.py  03_merge_transport.py  README.md
scripts/: aggregate_smoke.py  check-context-budget.sh  check-read-discipline.sh  eval_v1_calibration.py  eval_v1_claim_extraction.py  eval_v1_compare.py  eval_v1_cross_doc_coverage.py  eval_v1_merge.py  fetch_fixtures.sh  leak_scan.sh  publish.sh  real_doc_smoke.sh  run_smoke_audits.sh  run_v1_smoke.sh  shard-decisions.sh  shard-spec.sh  spec_trace_check.py
scripts/dev/: check-context-budget.sh  filter-verbose-output.sh  gen_calibration_eval.py  post-edit-shard.sh  shard-decisions.sh  shard-spec.sh
src/ctrldoc/: __init__.py  __main__.py  assembler.py  backends.py  budget.py  cli.py  cli_audit.py  cli_map.py  cli_qa.py  cli_review.py  cli_scan.py  config.py  models.py  models_v1.py  provenance.py  tokenizer.py  trace.py  versioning.py
src/ctrldoc/canary/: __init__.py  canary.py
src/ctrldoc/eval/: __init__.py  analytical.py  anomaly.py  (+12 more)
tests/: conftest.py  test_analytical_eval.py  test_analytical_review.py  test_anomaly_eval.py  test_anomaly_scan.py  test_backends.py  test_bm25.py  test_budget.py  test_calibration_eval.py  test_canary.py  test_chunker.py  test_claim_decomposer.py  test_claim_decomposer_anthropic.py  test_claim_extraction_eval.py  test_claim_verifier.py  test_cli.py  test_cli_audit.py  test_cli_ledger.py  test_cli_ledger_wired_ops.py  test_cli_map.py  test_cli_qa.py  test_cli_review.py  test_cli_review_citation_chunk_id_coerce.py  test_cli_scan.py  test_cli_v1_ops_passthrough.py  test_cli_workspace.py  test_compare_eval.py  test_config.py  test_coref.py  test_coverage_audit.py  test_coverage_eval.py  test_cross_doc_coverage_eval.py  test_embedder.py  test_eval_harness.py  test_eval_v1_baselines.py  test_evidence_pack.py  test_examples_smoke.py  test_extract_claim_persistence.py  test_extract_concept_population.py  test_extract_entity_resolution.py  (+103 more)
tests/eval/: analytical_eval.jsonl  anomaly_eval.jsonl  calibration_eval.jsonl  claim_extraction_eval.jsonl  compare_eval.jsonl  coverage_eval.jsonl  cross_doc_coverage_eval.jsonl  merge_eval.jsonl  qa_eval.jsonl  qa_refusal.jsonl  quality_eval.jsonl  relation_eval.jsonl
tests/families/: test_adversarial.py  test_determinism.py  test_incremental_update.py  test_ingest_completeness.py  test_niah.py  test_perf_cost.py  test_verifier_calibration.py
(+105 files in other folders)
