[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "ctrldoc"
version = "0.2.8"
description = "Local-first substrate for citation-grounded analysis of large documents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["llm", "rag", "documents", "analysis", "retrieval", "verification"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "anthropic>=0.40",
  "pydantic>=2.6",
  "typer>=0.12",
  "tiktoken>=0.7",
  "tomli>=2.0; python_version < '3.11'",
  "structlog>=24.1",
  "tenacity>=8.2",
]

[project.optional-dependencies]
ingest = [
  "pymupdf4llm>=0.0.17",
  "tree-sitter>=0.22",
  "fastcoref>=2.1",
  "gliner>=0.2",
]
index = [
  "sqlite-vec>=0.1",
  "tantivy>=0.22",
]
models = [
  "ollama>=0.3",
  "transformers>=4.40",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "hypothesis>=6.100",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pymupdf4llm>=0.0.17",
  "tree-sitter>=0.22",
  "tree-sitter-python>=0.21",
]

[project.scripts]
ctrldoc = "ctrldoc.cli:app"

[project.urls]
Repository = "https://github.com/USER/ctrldoc"
Issues = "https://github.com/USER/ctrldoc/issues"
Documentation = "https://github.com/USER/ctrldoc/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/ctrldoc"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "RUF001"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
  "slow: tests that take more than 5s",
  "network: requires network access",
  "requires_anthropic: needs ANTHROPIC_API_KEY",
  "requires_ollama: needs a running Ollama instance",
  "family_ingest_completeness: §8.6 family 1",
  "family_niah: §8.6 family 2 — needle in haystack",
  "family_synthetic_gold: §8.6 family 3 — synthetic gold doc",
  "family_reachability: §8.6 family 4",
  "family_negative_refusal: §8.6 family 5",
  "family_referential_integrity: §8.6 family 6",
  "family_robustness: §8.6 family 7",
  "family_adversarial: §8.6 family 8",
  "family_verifier_calibration: §8.6 family 9",
  "family_determinism: §8.6 family 10",
  "family_performance_cost: §8.6 family 11",
  "family_failure_resilience: §8.6 family 12",
  "family_incremental_update: §8.6 family 13",
  "family_concurrency: §8.6 family 14",
]
asyncio_mode = "auto"
